force-app/main/default/objects/TripBooking__c/TripBooking__c.object-meta.xml
<CustomObject>
    <label>TripBooking</label>
    <nameField>
        <label>TripBooking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TripBookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>