force-app/main/default/objects/TripBooking__c/fields/OperatorBusType__c.field-meta.xml
<CustomField>
    <fullName>OperatorBusType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OperatorBusType</label>
    <referenceTo>OperatorBusType__c</referenceTo>
    <relationshipLabel>TripBookings</relationshipLabel>
    <relationshipName>TripBookings</relationshipName>
    <type>Lookup</type>
</CustomField>