force-app/main/default/objects/TripBooking__c/fields/OperatorSeatInfo__c.field-meta.xml
<CustomField>
    <fullName>OperatorSeatInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OperatorSeatInfo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.OperatorBusType__c</field>
            <operation>equals</operation>
            <valueField>OperatorBusTypeSeat__c.OperatorBusType__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OperatorBusTypeSeat__c</referenceTo>
    <relationshipLabel>TripBookings</relationshipLabel>
    <relationshipName>TripBookings</relationshipName>
    <type>Lookup</type>
</CustomField>