force-app/main/default/objects/TripBooking__c/fields/TicketPrice__c.field-meta.xml
<CustomField>
    <fullName>TicketPrice__c</fullName>
    <label>TicketPrice</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>