force-app/main/default/objects/TripBooking__c/fields/TicketStatus__c.field-meta.xml
<CustomField>
    <fullName>TicketStatus__c</fullName>
    <label>TicketStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>